# learn-rust

./: Cargo.toml
pzn/: Cargo.toml
rust_book/: Cargo.toml
rust_book/a_common_concepts/a_variable/: Cargo.toml
rust_book/a_common_concepts/b_data_types/src/: main.rs
rust_book/a_common_concepts/d_control_flow/src/: condition.rs  main.rs  repetition.rs
rust_book/c_ownership/b_references_and_borrowing/: Cargo.toml
rust_book/c_ownership/b_references_and_borrowing/src/: main.rs
rust_book/c_ownership/c_slice_type/: Cargo.toml
rust_book/c_ownership/c_slice_type/src/: main.rs
rust_book/d_struct/a_about_struct/: Cargo.toml
rust_book/d_struct/a_about_struct/src/: main.rs
rust_book/d_struct/b_example_struct/: Cargo.toml
rust_book/d_struct/b_example_struct/src/: main.rs
rust_book/d_struct/c_associated_function/: Cargo.toml
rust_book/d_struct/c_associated_function/src/: color.rs  main.rs  movie.rs
rust_book/d_struct/c_method/: Cargo.toml
rust_book/d_struct/c_method/src/: main.rs
rust_book/d_struct/d_method/: Cargo.toml
rust_book/d_struct/d_method/src/: car.rs  main.rs
rust_book/e_enum_and_pattern/a_about_enum/: Cargo.toml
rust_book/e_enum_and_pattern/a_about_enum/src/: main.rs
rust_book/e_enum_and_pattern/b_pattern_matching/: Cargo.toml
rust_book/e_enum_and_pattern/b_pattern_matching/src/: main.rs
rust_book/f_package_crates_modules/a_package_crates/: Cargo.toml
rust_book/f_package_crates_modules/a_package_crates/src/: main.rs
rust_book/f_package_crates_modules/b_modules/: Cargo.toml
rust_book/f_package_crates_modules/c_inline_modules/: Cargo.toml
rust_book/f_package_crates_modules/d_scope_modules/: Cargo.toml
rust_book/f_package_crates_modules/e_visibility_and_privacy/: Cargo.toml
rust_book/g_common_collections/a_vector/: Cargo.toml
rust_book/g_common_collections/b_string/: Cargo.toml
rust_book/g_common_collections/c_hash_map/: Cargo.toml
rust_book/h_error_handling/a_unrecoverable/: Cargo.toml
rust_book/h_error_handling/b_recoverable/: Cargo.toml
rust_book/h_error_handling/c_example/: Cargo.toml
rust_book/i_generic_traits_lifetimes/a_generic/: Cargo.toml
rust_book/i_generic_traits_lifetimes/b_traits/: Cargo.toml
rust_book/i_generic_traits_lifetimes/c_lifetimes/: Cargo.toml
rust_book/i_generic_traits_lifetimes/d_lifetimes_basic/: Cargo.toml
(+47 files in other folders)
