[workspace]
members = [
    "a_common_concepts/a_variable",
    "a_common_concepts/b_data_types",
    "a_common_concepts/c_function",
    "a_common_concepts/d_control_flow",
    "b_guessing_game",
    "c_ownership/a_about_ownership",
    "c_ownership/b_references_and_borrowing",
    "c_ownership/c_slice_type",
    "pzn"
]
resolver = "2"