[workspace]
members = [
    "a_common_concepts/a_variable",
    "a_common_concepts/b_data_types",
    "a_common_concepts/c_function",
    "a_common_concepts/d_control_flow",
    "b_guessing_game",
    "c_ownership/a_about_ownership",
    "c_ownership/b_references_and_borrowing",
    "c_ownership/c_slice_type",
    "d_struct/a_about_struct",
    "d_struct/b_example_struct",
    "d_struct/c_associated_function",
    "d_struct/d_method",
    "e_enum_and_pattern/a_about_enum",
    "e_enum_and_pattern/b_pattern_matching",
    "f_package_crates_modules/a_package_crates",
    "f_package_crates_modules/b_modules",
    "f_package_crates_modules/c_inline_modules",
    "f_package_crates_modules/d_scope_modules",
    "f_package_crates_modules/e_visibility_and_privacy",
    "g_common_collections/a_vector",
    "g_common_collections/b_string",
    "g_common_collections/c_hash_map",
    "h_error_handling/a_unrecoverable",
    "h_error_handling/b_recoverable",
    "h_error_handling/c_example",
    "i_generic_traits_lifetimes/a_generic",
    "i_generic_traits_lifetimes/b_traits"
]

resolver = "2"
